--- a/Project1-Authentication/index.html
+++ b/Project1-Authentication/index.html
@@ -36,9 +36,9 @@ Authentication Featuring Web and Cloud Services
 <nav id="menu">
     <ul><ol>
     <li><a style="color:black;" href="review.html">Review Of Authentication</a></li><br>
-    <li><a style="color:black;" href="register.html">Authentication In Different Devices</a></li><br>
-    <li><a style="color:black;" href="video.html">Overview Of Cloud Services That Do Authentication</a></li><br>
-    <li><a style="color:black;" href="audio.html">Implementation</a></li><br>
+    <li><a style="color:black;" href="device.html">Authentication In Different Devices</a></li><br>
+    <li><a style="color:black;" href="overview.html">Overview Of Cloud Services That Do Authentication</a></li><br>
+    <li><a style="color:black;" href="implementation.html">Implementation</a></li><br>
 	</ol>
     
    </ul>
