--- a/Authentication-final/index.html
+++ b/Authentication-final/index.html
@@ -85,7 +85,6 @@ Authentication Featuring Web & Cloud services
   <a href="#devices">Authentication In Different Devices</a>
   <a href="#devices"><li>Mobile</li></a>
   <a href="#devices"><li>IoT</li></a>
-  <a href="#pc"><li>Pcs</li></a>
   <a href="#cloud"><li>Cloud</li></a>
   <a href="#twofactor">Two Factor Authentication</a>
   <a href="#implementation">Implementation</a>
@@ -313,7 +312,7 @@ The following graphic illustrates how risk-based authentication works based on s
 <li><a href="https://www.kuppingercole.com/blog/singh/device-authentication-and-idot-for-iot"> This Blog discusses how an effective authentication works in IoT and identity framework     for IoT devices.
 </a></li>
 <li><a href="http://ijarcsse.com/Before_August_2017/docs/papers/Volume_7/1_January2017/V7I1-01105.pdf">Cloud Service Authentication</a></li>
-<li><a href="https://searchsecurity.techtarget.com/definition/two-factor-authentication"></a>Two Factor Authentication</li>
+<li><a href="https://searchsecurity.techtarget.com/definition/two-factor-authentication">Two Factor Authentication</a></li>
 <li><a href="https://www.npmjs.com/package/passport">Implementation</a></li>
 <li><a href="https://www.npmjs.com/package/passport-remember-me">Implementation</a></li></ul>
 <h5 style="color:brown">Image References</h5>
