--- a/Authentication-final/index.html
+++ b/Authentication-final/index.html
@@ -16,7 +16,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: black;
+  background-color:  #006666;
   overflow-x: hidden;
   padding-top: 20px;
 }
@@ -30,7 +30,7 @@
 }
 
 .sidenav a:hover {
-  color: blue;
+  color: black;
 }
 
 .main {
@@ -126,16 +126,16 @@ someone gets hold of your biometrics, unlike a password which can be changed.</l
 
 <!-- Devices -->
 <article id="devices">
-<h3>Authetication in different Devices<h3>
-<p id="mobileiot"><li>Mobile Authentication:<br>
+<h3>Authetication in different Devices</h3>
+<p id="mobileiot"><li><b>Mobile Authentication:</b><br>
 Mobile authentication is the verification of a user’s identity through the use of a mobile device and one or more authentication methods for secure access. Mobile devices can also be used as one of the authentication levels in other multiple authentication methods such as software-based security applications on a mobile device generate an OTP to the device for signing on. Authentication techniques such as Slide Lock
 Number Lock, Pin code and Password, Biometric Based Authentication, Graphical Based Password, Fingerprint Recognition, Iris Recognition, Speaker Recognition, Location based and  face recognition are being more commonly used techniques for mobile devices. 
-</li>
-<li>IoT<br>
+</li><br>
+<li><b>IoT</b><br>
 Each IoT device is strongly authenticated using any unique identity while any other device is trying to connect to its IoT gateway or central server.
 There are many dimensions in IoT authentication considering hardware limitations, cost consciousness  and operating environment. Most embedded systems implement device authentication methods that depend on a software-based approach.
 Popular examples are use of MAC (Message Authentication Code) to enable secure key exchange for device authentication over constrained IoT protocols, also light-weight adaptations of PKI and OAuth2 protocols to match the scope and scale of IoT use-cases.
-</li></p><br>
+</li></p>
 <p>Below picture showcase how an IoT device (smart watch) is being authenticated via bluetooth with the smart mobile to seek privileges to operate.</p><br>
 <img id="iot" src="images/IoT.png" alt="" width="450px" height="240px">
 </p>
@@ -181,7 +181,7 @@ There are three important factors of cloud security requirements, these are conf
 <li><b>Availability</b>- To ensure that only authorized person can access to shared information in cloud service provider</li></ul>
 
 <p><b>Authentication Techniques</b></p>
-<img  src="images/aincloud.png" style="margin-left:160px"  alt="" width="350px" height="300px">
+<img  src="images/acloud.png" style="margin-left:160px"  alt="" width="350px" height="300px">
 <p><ol><li><b>Username and Password Authentication :</b><br>
     Username and password are required to access information in the CSP .
     This technique fails in providing a higher and reliable security because it is tough to check whether the request is from the authorized user
