--- a/Authentication-final/index.html
+++ b/Authentication-final/index.html
@@ -181,7 +181,7 @@ There are three important factors of cloud security requirements, these are conf
 <li><b>Availability</b>- To ensure that only authorized person can access to shared information in cloud service provider</li></ul>
 
 <p><b>Authentication Techniques</b></p>
-<img  src="images/acloud.png" style="margin-left:160px"  alt="" width="350px" height="300px">
+<!--<img  src="images/acloud.png" style="margin-left:160px"  alt="" width="350px" height="300px">-->
 <p><ol><li><b>Username and Password Authentication :</b><br>
     Username and password are required to access information in the CSP .
     This technique fails in providing a higher and reliable security because it is tough to check whether the request is from the authorized user
