--- a/Authentication-final/index.html
+++ b/Authentication-final/index.html
@@ -308,13 +308,15 @@ The following graphic illustrates how risk-based authentication works based on s
 <h5 style="color:brown">Reference</h5>
 <ol><li><a href="https://pdfs.semanticscholar.org/5f3b/637401712103dcf1656884bf66701ddac3e2.pdf">https://pdfs.semanticscholar.org/5f3b/637401712103dcf1656884bf66701ddac3e2.pdf
 </a><br>This is one of the International Journal which discuss all the mobile authentication techniques and gives comparative with usage of the techniques.</li>
-<br><li><a href="https://tools.ietf.org/html/rfc6238">RFC 6238</a></li>
+
+
+
 <br><li><a href="https://www.kuppingercole.com/blog/singh/device-authentication-and-idot-for-iot"> https://www.kuppingercole.com/blog/singh/device-authentication-and-idot-for-iot
-</a><br>This Blog discusses how an effective authentication works in IoT and identity framework     for IoT devices.</li>
+</a><br>This Blog discusses how an effective authentication works in IoT and identity framework  for IoT devices.</li>
 <br><li><a href="http://ijarcsse.com/Before_August_2017/docs/papers/Volume_7/1_January2017/V7I1-01105.pdf">http://ijarcsse.com/Before_August_2017/docs/papers/Volume_7/1_January2017/V7I1-01105.pdf</a><br>Cloud services & Different kinds of Cloud Authentication is extracted from this link</li>
 <br><li><a href="https://searchsecurity.techtarget.com/definition/two-factor-authentication">Two Factor Authentication</a></li>
-<br><li><a href="https://www.npmjs.com/package/passport">Implementation</a></li>
-<br><li><a href="https://www.npmjs.com/package/passport-remember-me">Implementation</a></li></ol>
+<br><li><a href="https://www.npmjs.com/package/passport">https://www.npmjs.com/package/passport</a>A module of node.js is used for implementing two factor authentication using google authenticator</li>
+<br>
 <h5 style="color:brown">Image References</h5>
 <ul><li><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSoEAHuIlC7irvL346YTD0a7rOt9ujh55vzj0tLH9H54fuzgUnV&usqp=CAU">https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSoEAHuIlC7irvL346YTD0a7rOt9ujh55vzj0tLH9H54fuzgUnV&usqp=CAU</a>
 <br>Diagram depicts how an IoT device is authenticated</li>
