--- a/Authentication-final/index.html
+++ b/Authentication-final/index.html
@@ -314,7 +314,7 @@ The following graphic illustrates how risk-based authentication works based on s
 <br><li><a href="https://www.kuppingercole.com/blog/singh/device-authentication-and-idot-for-iot"> https://www.kuppingercole.com/blog/singh/device-authentication-and-idot-for-iot
 </a><br>This Blog discusses how an effective authentication works in IoT and identity framework  for IoT devices.</li>
 <br><li><a href="http://ijarcsse.com/Before_August_2017/docs/papers/Volume_7/1_January2017/V7I1-01105.pdf">http://ijarcsse.com/Before_August_2017/docs/papers/Volume_7/1_January2017/V7I1-01105.pdf</a><br>Cloud services & Different kinds of Cloud Authentication is extracted from this link</li>
-<br><li><a href="https://searchsecurity.techtarget.com/definition/two-factor-authentication">Two Factor Authentication</a></li>
+<br><li><a href="https://searchsecurity.techtarget.com/definition/two-factor-authentication">href="https://searchsecurity.techtarget.com/definition/two-factor-authentication</a><br>Description and explanation of Two Factor Authentication extracted</li>
 <br><li><a href="https://www.npmjs.com/package/passport">https://www.npmjs.com/package/passport</a>A module of node.js is used for implementing two factor authentication using google authenticator</li>
 <br>
 <h5 style="color:brown">Image References</h5>
